AWS_Main/infrastructure/aws/cloudformation/csye6225-cf-networking.json
{
  "Description": "Networking Stack",
  "AWSTemplateFormatVersion": "2010-09-09",
  "Parameters": {
    "stackname": {
      "Description": "Stack Name",
      "Type": "String",
      "Default": "stack01"
    }
  },
  "Outputs": {
    "publicsubnet1": {
      "Description": "The public subnet ID to use for public web servers",
      "Value": {
        "Ref": "publicsubnet1"
      },
      "Export": {
        "Name": {
          "Fn::Sub": "${AWS::StackName}-publicsubnet1ID"
        }
      }
    },
    "publicsubnet2": {
      "Description": "The public subnet ID to use for public web servers",
      "Value": {
        "Ref": "publicsubnet2"
      },
      "Export": {
        "Name": {
          "Fn::Sub": "${AWS::StackName}-publicsubnet2ID"
        }
      }
    },
    "publicsubnet3": {
      "Description": "The public subnet ID to use for public web servers",
      "Value": {
        "Ref": "publicsubnet3"
      },
      "Export": {
        "Name": {
          "Fn::Sub": "${AWS::StackName}-publicsubnet3ID"
        }
      }
    },
    "subnet1": {
      "Description": "The subnet ID to use for public web servers",
      "Value": {
        "Ref": "subnet1"
      },
      "Export": {
        "Name": {
          "Fn::Sub": "${AWS::StackName}-subnet1ID"
        }
      }
    },
    "subnet2": {
      "Description": "The subnet ID to use for public web servers",
      "Value": {
        "Ref": "subnet2"
      },
      "Export": {
        "Name": {
          "Fn::Sub": "${AWS::StackName}-subnet2ID"
        }
      }
    },
    "subnet3": {
      "Description": "The subnet ID to use for public web servers",
      "Value": {
        "Ref": "subnet3"
      },
      "Export": {
        "Name": {
          "Fn::Sub": "${AWS::StackName}-subnet3ID"
        }
      }
    },
    "vpc": {
      "Description": "The vpc ID to use for public web servers",
      "Value": {
        "Ref": "vpc"
      },
      "Export": {
        "Name": {
          "Fn::Sub": "${AWS::StackName}-vpcID"
        }
      }
    }
  },
  "Resources": {
    "vpc": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsSupport": true,
        "EnableDnsHostnames": true,
        "InstanceTenancy": "default",
        "Tags": [{
          "Key": "Name",
          "Value": {
            "Fn::Join": [
              "",
              [{
                  "Ref": "stackname"
                },
                "-csye6225-vpc"
              ]
            ]
          }
        }]
      }
    },
    "publicsubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "vpc"
        },
        "CidrBlock": "10.0.0.0/24",
        "AvailabilityZone": "us-east-1a",
        "MapPublicIpOnLaunch": true,
        "Tags": [{
          "Key": "Name",
          "Value": {
            "Fn::Join": [
              "",
              [{
                  "Ref": "stackname"
                },
                "-csye6225-publicsubnet-1"
              ]
            ]
          }
        }]
      }
    },
    "publicsubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "vpc"
        },
        "CidrBlock": "10.0.1.0/24",
        "AvailabilityZone": "us-east-1b",
        "MapPublicIpOnLaunch": true,
        "Tags": [{
          "Key": "Name",
          "Value": {
            "Fn::Join": [
              "",
              [{
                  "Ref": "stackname"
                },
                "-csye6225-publicsubnet-2"
              ]
            ]
          }
        }]
      }
    },
    "publicsubnet3": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "vpc"
        },
        "CidrBlock": "10.0.2.0/24",
        "AvailabilityZone": "us-east-1c",
        "MapPublicIpOnLaunch": true,
        "Tags": [{
          "Key": "Name",
          "Value": {
            "Fn::Join": [
              "",
              [{
                  "Ref": "stackname"
                },
                "-csye6225-publicsubnet-3"
              ]
            ]
          }
        }]
      }
    },
    "subnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "vpc"
        },
        "CidrBlock": "10.0.3.0/24",
        "AvailabilityZone": "us-east-1a",
        "MapPublicIpOnLaunch": false,
        "Tags": [{
          "Key": "Name",
          "Value": {
            "Fn::Join": [
              "",
              [{
                  "Ref": "stackname"
                },
                "-csye6225-subnet-1"
              ]
            ]
          }
        }]
      }
    },
    "subnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "vpc"
        },
        "CidrBlock": "10.0.4.0/24",
        "AvailabilityZone": "us-east-1b",
        "MapPublicIpOnLaunch": false,
        "Tags": [{
          "Key": "Name",
          "Value": {
            "Fn::Join": [
              "",
              [{
                  "Ref": "stackname"
                },
                "-csye6225-subnet-2"
              ]
            ]
          }
        }]
      }
    },
    "subnet3": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "vpc"
        },
        "CidrBlock": "10.0.5.0/24",
        "AvailabilityZone": "us-east-1c",
        "MapPublicIpOnLaunch": false,
        "Tags": [{
          "Key": "Name",
          "Value": {
            "Fn::Join": [
              "",
              [{
                  "Ref": "stackname"
                },
                "-csye6225-subnet-3"
              ]
            ]
          }
        }]
      }
    },
    "ig": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [{
          "Key": "Name",
          "Value": {
            "Fn::Join": [
              "",
              [{
                  "Ref": "stackname"
                },
                "-csye6225-ig"
              ]
            ]
          }
        }]
      }
    },
    "vpcIgAttch": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": {
          "Ref": "ig"
        },
        "VpcId": {
          "Ref": "vpc"
        }
      }
    },
    "publicrouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc"
        },
        "Tags": [{
          "Key": "Name",
          "Value": {
            "Fn::Join": [
              "",
              [{
                  "Ref": "stackname"
                },
                "-csye6225-publicrt"
              ]
            ]
          }
        }]
      }
    },
    "publicRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "publicrouteTable"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "ig"
        }
      }
    },
    "routeTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc"
        },
        "Tags": [{
          "Key": "Name",
          "Value": {
            "Fn::Join": [
              "",
              [{
                  "Ref": "stackname"
                },
                "-csye6225-rt"
              ]
            ]
          }
        }]
      }
    },
    "pubsubnetRouteTableAssociation1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "publicsubnet1"
        },
        "RouteTableId": {
          "Ref": "publicrouteTable"
        }
      }
    },
    "pubsubnetRouteTableAssociation2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "publicsubnet2"
        },
        "RouteTableId": {
          "Ref": "publicrouteTable"
        }
      }
    },
    "pubsubnetRouteTableAssociation3": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "publicsubnet3"
        },
        "RouteTableId": {
          "Ref": "publicrouteTable"
        }
      }
    },
    "subnetRouteTableAssociation1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "subnet1"
        },
        "RouteTableId": {
          "Ref": "routeTable"
        }
      }
    },
    "subnetRouteTableAssociation2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "subnet2"
        },
        "RouteTableId": {
          "Ref": "routeTable"
        }
      }
    },
    "subnetRouteTableAssociation3": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "subnet3"
        },
        "RouteTableId": {
          "Ref": "routeTable"
        }
      }
    },
    "route1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "ig"
        },
        "RouteTableId": {
          "Ref": "routeTable"
        }
      }
    }
  }
}
